edition = "2023";

package earbug.v5;

import "google/protobuf/duration.proto";

message Store {
  reserved 1, 2, 3, 5, 6, 7;
  // track id : track
  map<string, Track> tracks = 4;
  map<int64, UserData> users = 8;
}

message UserData {
  bytes token = 1;
  // rfc3339 timestamp : playback
  map<string, Playback> playbacks = 2;
}

message Playback {
  string track_id = 1;
  string track_uri = 2;
  string context_type = 3;
  string context_uri = 4;
}

message Track {
  string id = 1;
  string uri = 2;
  string type = 3;
  string name = 4;
  google.protobuf.Duration duration = 5;
  repeated Artist artists = 6;

  // audio features backfill
  AudioFeatures features = 7;
}

// https://developer.spotify.com/documentation/web-api/reference/get-several-audio-features
message AudioFeatures {
  float acousticness = 1;
  float danceability = 2;
  float energy = 3;
  float instrumentalness = 4;
  int32 key = 5;
  float liveness = 6;
  float loudness = 7;
  int32 mode = 8;
  float speechiness = 9;
  float tempo = 10;
  int32 time_signature = 11;
  float valence = 12;
}

message Artist {
  string id = 1;
  string uri = 2;
  string name = 3;
}
